GREY-632 Fix Description Spacing

--- a/client/app/styles/_dashboard.scss
+++ b/client/app/styles/_dashboard.scss
@@ -516,13 +516,13 @@ ul.sidebar .sidebar-list .menu-icon {
 .myTaskTable {
     table {
         th:first-child {
-            width: 15%;
+            width: 25%;
         }
         th:nth-child(2) {
-            width: 35%;
+            width: 30%;
         }
         th:nth-child(3) {
-            width: 25%;
+            width: 20%;
         }
         th:nth-child(4) {
             width: 25%;
